# INTELLIGENT-CONTRACT-MANAGEMENT

./: .gitignore  CONTRIBUTING.md  MANIFESTO.md  README.md  ese.config.yaml  main.py  pyproject.toml  render.yaml  start_ese.sh  start_icm.sh  vercel.json
.understand-anything/: knowledge-graph.json  meta.json
AICoding/: QWEN_040426.md
demo_site/: README.md  app.js  index.html  styles.css  vercel.json
docs/: AGENTIC_ANALYSIS.md  AIRA_REMEDIATION_PLAN.md  CASE_INTELLIGENCE_PLATFORM.md  CONFIG_CONTRACT.md  CONTRACT_INTELLIGENCE_INITIATIVE.md  CONTRACT_INTELLIGENCE_PRODUCT_DIRECTION.md  CONTRACT_INTELLIGENCE_REMEDIATION_MATRIX.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SPLIT_PLAN.md  ESE_PLATFORM_SYNC_MATRIX.md  PIPELINE_STATE.md  PLATFORM_ARCHITECTURE.md  RELEASE.md  SECURITY_NOTES.md  TROUBLESHOOTING.md
ese/: adapters.py  admin.py  cli.py  config.py  config_packs.py  constants.py  crm.py  dashboard.py  doctor.py  document_ingestion.py  feedback.py  init_wizard.py  knowledge_base.py  local_runtime.py  logging_config.py  pipeline.py  repo_context.py  reports.py  templates.py
ese-ccm/: README.md  ese.config.yaml
scripts/: build_macos_desktop.sh  generate_desktop_icon.py  start_icm_reference.sh
test_e2e_artifacts/: 01_architect.json  02_implementer.json  03_adversarial_reviewer.json  04_security_auditor.json  05_test_generator.json  06_performance_analyst.json  ese_config.snapshot.yaml  ese_summary.md  pipeline_state.json
tests/: test_adapters.py  test_cli.py  test_config.py  test_contract_intelligence_api.py  test_contract_intelligence_bid_review.py  test_doctor.py  (+17 more)
(+123 files in other folders)
