[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ese-cli"
version = "1.0.1"
description = "Ensemble Software Engineering (ESE) CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "questionary>=2.0",
  "PyYAML>=6.0",
  "pydantic>=2.7",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pypdf>=4.0",
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "python-pptx>=0.6",
]

[project.scripts]
ese = "ese.cli:app"

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.uv]
default-groups = ["dev"]
required-version = ">=0.9.0"

[tool.fastapi]
entrypoint = "main:app"

[tool.setuptools.packages.find]
include = ["ese*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
